<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded" >

    <TableRow
        android:id="@+id/tableRowTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/timer"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/timer_start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green"
            android:textStyle="italic" />
    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TableRow
            android:id="@+id/tableRowStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_round_button"
                android:drawableLeft="@drawable/start"
                android:drawablePadding="2dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:text="@string/start"
                android:textStyle="italic" />

            <!--
            <TextView
                android:id="@+id/textViewSeperator1"
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonNewGame"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_round_button"
                android:drawableLeft="@drawable/new_game"
                android:drawablePadding="2dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/new_game"
                android:textStyle="italic" />
            -->
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/countdown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/countdown"
        android:textColor="#000"
        android:visibility="invisible" />

</FrameLayout>